--- a/src/ILoveAudi/Views/Home/Index.cshtml
+++ b/src/ILoveAudi/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
 <table id="audi" class="display" cellspacing="0" width="100%">
     <thead>
     <tr>
+        <th>Delete item </th>
         <th>Имя</th>
         <th>Цена</th>
         <th>Год</th>
